// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should have a link 1`] = `
<t-badge link="#">
  <mock:shadow-root>
    <a class="badge badge--link" href="#">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Label
</t-badge>
`;

exports[`Badge should match snapshot 1`] = `
<t-badge>
  <mock:shadow-root>
    <span class="badge">
      <slot></slot>
    </span>
  </mock:shadow-root>
  Label
</t-badge>
`;
